--- a/overlay/frameworks/base/core/res/res/xml/storage_list.xml
+++ b/overlay/frameworks/base/core/res/res/xml/storage_list.xml
@@ -35,14 +35,14 @@
 -->
 
 <StorageList xmlns:android="http://schemas.android.com/apk/res/android">
-    <storage android:mountPoint="/mnt/sdcard2"
+    <storage android:mountPoint="/mnt/sdcard"
              android:storageDescription="@string/storage_sd_card"
              android:primary="true"
              android:removable="true"
              android:allowMassStorage="true" />
-    <storage android:mountPoint="/mnt/sdcard"
-             android:storageDescription="@string/storage_internal"
+    <storage android:mountPoint="/mnt/udisk"
+             android:storageDescription="@string/storage_usb"
              android:primary="false"
-             android:removable="false"
+             android:removable="true"
              android:allowMassStorage="true" />
 </StorageList>
