mione_plus: clean overlay

--- a/overlay/frameworks/base/core/res/res/xml/storage_list.xml
+++ b/overlay/frameworks/base/core/res/res/xml/storage_list.xml
@@ -43,6 +43,5 @@
     <storage android:mountPoint="/mnt/udisk"
              android:storageDescription="@string/storage_usb"
              android:primary="false"
-             android:removable="true"
-             android:allowMassStorage="true" />
+             android:removable="true" />
 </StorageList>
