mione_plus: update mount points
Change-Id: I865650d9385286f1ea2c69a00d97c27e5ef64a8a

--- a/overlay/frameworks/base/core/res/res/xml/storage_list.xml
+++ b/overlay/frameworks/base/core/res/res/xml/storage_list.xml
@@ -35,12 +35,12 @@
 -->
 
 <StorageList xmlns:android="http://schemas.android.com/apk/res/android">
-    <storage android:mountPoint="/mnt/sdcard"
+    <storage android:mountPoint="/storage/sdcard0"
              android:storageDescription="@string/storage_sd_card"
              android:primary="true"
              android:removable="true"
              android:allowMassStorage="true" />
-    <storage android:mountPoint="/mnt/udisk"
+    <storage android:mountPoint="/storage/usbdisk0"
              android:storageDescription="@string/storage_usb"
              android:primary="false"
              android:removable="true" />
