fix back led light

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -201,4 +201,7 @@
     <!-- The restoring is handled by modem if it is true -->
 <!--    <bool translatable="false" name="skip_restoring_network_selection">true</bool>-->
 
+    <bool name="config_qualcommElectronBeam">true</bool>
+ 
+
 </resources>
