--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -139,12 +139,12 @@
 
     <!-- tetherable USB interfaces. -->
     <string-array translatable="false" name="config_tether_usb_regexs">
-        <item>"usb0"</item>
+        <item>"rndis\\d"</item>
     </string-array>
 
     <!-- tetherable Wifi interfaces. -->
     <string-array translatable="false" name="config_tether_wifi_regexs">
-        <item>"wlan1"</item>
+        <item>"wl0.1"</item>
     </string-array>
 
     <!-- tetherable bluetooth interfaces. -->
@@ -158,6 +158,7 @@
     <integer-array translatable="false" name="config_tether_upstream_types">
         <item>0</item>
         <item>1</item>
+        <item>4</item>
         <item>5</item>
         <item>7</item>
     </integer-array>
