--- a/overlay/frameworks/base/core/res/res/xml/power_profile.xml
+++ b/overlay/frameworks/base/core/res/res/xml/power_profile.xml
@@ -19,19 +19,19 @@
 
 <device name="Android">
   <item name="none">0</item>
-  <item name="screen.on">200</item>
-  <item name="bluetooth.active">150</item>
-  <item name="bluetooth.on">1</item>
-  <item name="bluetooth.at">1</item> <!-- TBD -->
-  <item name="screen.full">250</item>
-  <item name="wifi.on">1</item>
-  <item name="wifi.active">150</item>
-  <item name="wifi.scan">200</item>
+  <item name="screen.on">100</item>
+  <item name="bluetooth.active">142</item>
+  <item name="bluetooth.on">0.3</item>
+  <item name="bluetooth.at">35690</item>
+  <item name="screen.full">160</item>
+  <item name="wifi.on">4</item>
+  <item name="wifi.active">120</item>
+  <item name="wifi.scan">220</item>
   <item name="dsp.audio">88</item>
   <item name="dsp.video">88</item>
-  <item name="radio.active">150</item>
-  <item name="gps.on">70</item>
-  <item name="battery.capacity">1520</item>
+  <item name="radio.active">300</item>
+  <item name="gps.on">170</item>
+  <item name="battery.capacity">1390</item>
   <item name="radio.scanning">70</item>
   <array name="radio.on">
     <value>3</value>
@@ -71,31 +71,31 @@
   <item name="cpu.awake">10</item>
   <!-- Power consumption at different speeds -->
   <array name="cpu.active">
-    <value>60</value>
-    <value>110</value>
-    <value>125</value>
-    <value>140</value>
-    <value>155</value>
-    <value>170</value>
-    <value>185</value>
-    <value>200</value>
-    <value>215</value>
-    <value>230</value>
-    <value>245</value>
-    <value>260</value>
-    <value>275</value>
-    <value>290</value>
-    <value>305</value>
-    <value>320</value>
-    <value>335</value>
-    <value>350</value>
-    <value>365</value>
-    <value>380</value>
-    <value>395</value>
-    <value>410</value>
-    <value>425</value>
-    <value>440</value>
-    <value>455</value>
-    <value>470</value>
+    <value>66.6</value>
+    <value>84</value>
+    <value>90.8</value>
+    <value>96</value>
+    <value>105</value>
+    <value>111.5</value>
+    <value>117.3</value>
+    <value>123.6</value>
+    <value>134.5</value>
+    <value>141.8</value>
+    <value>148.5</value>
+    <value>168.4</value>
+    <value>168.4</value>
+    <value>168.4</value>
+    <value>168.4</value>
+    <value>168.4</value>
+    <value>168.4</value>
+    <value>168.4</value>
+    <value>168.4</value>
+    <value>168.4</value>
+    <value>168.4</value>
+    <value>168.4</value>
+    <value>168.4</value>
+    <value>168.4</value>
+    <value>168.4</value>
+    <value>168.4</value>
   </array>
 </device>
