mione_plus: fix USB tethering
Change-Id: Ib570a1768601033f173c3e293b20def6471fb76d

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -123,7 +123,7 @@
 
     <!-- tetherable USB interfaces. -->
     <string-array translatable="false" name="config_tether_usb_regexs">
-        <item>"usb0"</item>
+        <item>"rndis\\d"</item>
     </string-array>
 
     <!-- tetherable Wifi interfaces. -->
