--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -122,7 +122,7 @@
 
     <!-- tetherable Wifi interfaces. -->
     <string-array translatable="false" name="config_tether_wifi_regexs">
-        <item>"wlan1"</item>
+        <item>"wl0.1"</item>
     </string-array>
 
     <!-- tetherable bluetooth interfaces. -->
@@ -155,6 +155,10 @@
 
     <!-- Boolean indicating whether the wifi chipset has p2p support -->
     <bool translatable="false" name="config_wifi_p2p_support">true</bool>
+
+    <!-- Boolean indicating whether the start command should be called on the wireless interface
+         when starting the SoftAp -->
+    <bool name="config_wifiApStartInterface">true</bool>
 
 <!--    <bool name="config_ui_enableFadingMarquee">false</bool>-->
 
