--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -176,7 +176,7 @@
     <bool name="config_batterySdCardAccessibility">true</bool>
 
     <!-- Device supports LED flashlight -->
-    <bool name="config_enableTorch">false</bool>
+    <bool name="config_enableTorch">true</bool>
 
     <!-- Hardware 'face' keys present on the device, stored as a bit field.
          This integer should equal the sum of the corresponding value for each
