mione_plus: set world_phone to true
Change-Id: I4554585f774efdfe987bde0a333de052ed28a221

--- a/overlay/packages/apps/Phone/res/values/config.xml
+++ b/overlay/packages/apps/Phone/res/values/config.xml
@@ -17,6 +17,9 @@
 <!-- Passion-specific phone app resources. -->
 <resources>
 
+    <!-- Flag indicating if the phone is a world phone -->
+    <bool name="world_phone">true</bool>
+
     <!-- Enable the onscreen "Dial" button in the emergency dialer. -->
     <bool name="config_show_onscreen_dial_button">true</bool>
 
