mione_plus: update camera configs
Change-Id: Ifc66b315f9cf4e527667b238b4c7110d1f849dd9
Signed-off-by: Tommy Alex <iptux7@gmail.com>

--- a/overlay/packages/apps/Camera2/res/values/config.xml
+++ b/overlay/packages/apps/Camera2/res/values/config.xml
@@ -18,10 +18,10 @@
 -->
 
 <resources>
-    <!-- Allows setting video size before recording starts -->
-    <bool name="needsEarlyVideoSize">true</bool>
+    <!-- Stay in continuous focus even if touch-to-focus is used
+         This option doesn't make sense if wantsFocusModes is on -->
+    <bool name="useContinuosFocusForTouch">true</bool>
 
-    <!-- The camera removes the focus modes by default when touch-to-focus
-         exists. Use this option to change that behavior -->
-    <bool name="wantsFocusModes">true</bool>
+    <!-- Allow HDR and ZSL together -->
+    <bool name="enableHDRWithZSL">true</bool>
 </resources>
