overlay:add mione_plus battery capacity information
Signed-off-by: Tommy Alex <iptux7@gmail.com>

--- a/overlay/frameworks/base/core/res/res/xml/power_profile.xml
+++ b/overlay/frameworks/base/core/res/res/xml/power_profile.xml
@@ -98,4 +98,6 @@
     <value>168.4</value>
     <value>168.4</value>
   </array>
+  <!-- This is the battery capacity in mAh (measured at nominal voltage) -->
+  <item name="battery.capacity">1880</item>
 </device>
